--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet"
+    <link rel="icon" href="./favicon.png" type="image/png" />
+  <!--  <link rel="stylesheet"
           href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"> 
-    <title>ToDo App</title>
+  --><title>Transport Quiz</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
